--- a/index.html
+++ b/index.html
@@ -29,21 +29,20 @@
             <div class="card">
                 <h3 class="card-header">Search History:</h3>
                 <div id="history-container" class="card-body">
-                    <button class="btn1 hide"></button>
+                    <!-- <button class="btn1 hide"></button>
                     <button class="btn2 hide"></button>
                     <button class="btn3 hide"></button>
                     <button class="btn4 hide"></button>
-                    <button class="btn5 hide"></button>
+                    <button class="btn5 hide"></button> -->
                 </div>
             </div>
         </div>
 
         <div class="col-12 col-md-8">
-            <div class="city-container">
-                <h1>City: <div id="city"></div>
-                </h1>
+            <div class="current-container">
+                <h2 class="subtitle">Today:</h2>
+                <div id="current" class="list-group"></div>
             </div>
-            <div id="city-info" class="list-group"></div>
             <div class="forecast-container">
                 <h2 class="subtitle">5 day forecast:</h2>
                 <div id="forecast" class="list-group"></div>
