--- a/index.html
+++ b/index.html
@@ -39,13 +39,45 @@
         </div>
 
         <div class="col-12 col-md-8">
-            <div class="current-container">
-                <h2 class="subtitle">Today:</h2>
-                <div id="current" class="list-group"></div>
+            <div class="current-container row">
+                <h2 class="col-1">City: <h2 class="today-in col-1"></h2><h3 class="date1"></h3></h2>
+                <div id="current" class="list-group">
+                    <div>
+                        <li>Temperaure:</li>
+                        <li>Humidity:</li>
+                        <li>Wind Speed:</li>
+                    </div>
+                </div>
             </div>
             <div class="forecast-container">
                 <h2 class="subtitle">5 day forecast:</h2>
-                <div id="forecast" class="list-group"></div>
+                <div id="forecast" class="row">
+                    <div class="card col-2">
+                        <li>Temperaure:</li>
+                        <li>Humidity:</li>
+                        <li>Wind Speed:</li>
+                    </div>
+                    <div class="card col-2">
+                        <li>Temperaure:</li>
+                        <li>Humidity:</li>
+                        <li>Wind Speed:</li>
+                    </div>
+                    <div class="card col-2">
+                        <li>Temperaure:</li>
+                        <li>Humidity:</li>
+                        <li>Wind Speed:</li>
+                    </div>
+                    <div class="card col-2">
+                        <li>Temperaure:</li>
+                        <li>Humidity:</li>
+                        <li>Wind Speed:</li>
+                    </div>
+                    <div class="card col-2">
+                        <li>Temperaure:</li>
+                        <li>Humidity:</li>
+                        <li>Wind Speed:</li>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
