finished getting all info for current day

--- a/index.html
+++ b/index.html
@@ -41,38 +41,38 @@
         <div class="col-12 col-md-8">
             <div class="current-container row">
                 <h2 class="col-1">City: <h2 class="today-in col-1"></h2><h3 class="date1"></h3></h2>
-                <div id="current" class="list-group">
-                    <div>
-                        <li>Temperaure:</li>
-                        <li>Humidity:</li>
-                        <li>Wind Speed:</li>
+                <div id="current">
+                    <div class="list-group">
+                        <li class="d-inline">Temperaure: <p class="temp1 d-inline"></p></li>
+                        <li class="d-inline">Humidity: <p class="hum1 d-inline"></p></li>
+                        <li class="d-inline">Wind Speed: <p class="wind1 d-inline"></p></li>
                     </div>
                 </div>
             </div>
             <div class="forecast-container">
-                <h2 class="subtitle">5 day forecast:</h2>
+                <h2>5 day forecast:</h2>
                 <div id="forecast" class="row">
-                    <div class="card col-2">
+                    <div class="card col-3" >
+                        <li>Temperaure:</li>
+                        <li>Humidity:</li>
+                        <li class="d-inline">Wind Speed: <p class="wind2 d-inline"></p></li>
+                    </div>
+                    <div class="card col-3">
                         <li>Temperaure:</li>
                         <li>Humidity:</li>
                         <li>Wind Speed:</li>
                     </div>
-                    <div class="card col-2">
+                    <div class="card col-3">
                         <li>Temperaure:</li>
                         <li>Humidity:</li>
                         <li>Wind Speed:</li>
                     </div>
-                    <div class="card col-2">
+                    <div class="card col-3">
                         <li>Temperaure:</li>
                         <li>Humidity:</li>
                         <li>Wind Speed:</li>
                     </div>
-                    <div class="card col-2">
-                        <li>Temperaure:</li>
-                        <li>Humidity:</li>
-                        <li>Wind Speed:</li>
-                    </div>
-                    <div class="card col-2">
+                    <div class="card col-3">
                         <li>Temperaure:</li>
                         <li>Humidity:</li>
                         <li>Wind Speed:</li>
