added info for all cards

--- a/index.html
+++ b/index.html
@@ -53,29 +53,34 @@
                 <h2>5 day forecast:</h2>
                 <div id="forecast" class="row">
                     <div class="card col-3" >
-                        <li>Temperaure:</li>
-                        <li>Humidity:</li>
+                        <h3 class="date2"></h3>
+                        <li class="d-inline">Temperaure: <p class="temp2 d-inline"></p></li>
+                        <li class="d-inline">Humidity: <p class="hum2 d-inline"></p></li>
                         <li class="d-inline">Wind Speed: <p class="wind2 d-inline"></p></li>
                     </div>
                     <div class="card col-3">
-                        <li>Temperaure:</li>
-                        <li>Humidity:</li>
-                        <li>Wind Speed:</li>
+                        <h3 class="date3"></h3>
+                        <li class="d-inline">Temperaure: <p class="temp3 d-inline"></p></li>
+                        <li class="d-inline">Humidity: <p class="hum3 d-inline"></p></li>
+                        <li class="d-inline">Wind Speed: <p class="wind3 d-inline"></p></li>
                     </div>
                     <div class="card col-3">
-                        <li>Temperaure:</li>
-                        <li>Humidity:</li>
-                        <li>Wind Speed:</li>
+                        <h3 class="date4"></h3>
+                        <li class="d-inline">Temperaure: <p class="temp4 d-inline"></p></li>
+                        <li class="d-inline">Humidity: <p class="hum4 d-inline"></p></li>
+                        <li class="d-inline">Wind Speed: <p class="wind4 d-inline"></p></li>
                     </div>
                     <div class="card col-3">
-                        <li>Temperaure:</li>
-                        <li>Humidity:</li>
-                        <li>Wind Speed:</li>
+                        <h3 class="date5"></h3>
+                        <li class="d-inline">Temperaure: <p class="temp5 d-inline"></p></li>
+                        <li class="d-inline">Humidity: <p class="hum5 d-inline"></p></li>
+                        <li class="d-inline">Wind Speed: <p class="wind5 d-inline"></p></li>
                     </div>
                     <div class="card col-3">
-                        <li>Temperaure:</li>
-                        <li>Humidity:</li>
-                        <li>Wind Speed:</li>
+                        <h3 class="date6"></h3>
+                        <li class="d-inline">Temperaure: <p class="temp6 d-inline"></p></li>
+                        <li class="d-inline">Humidity: <p class="hum6 d-inline"></p></li>
+                        <li class="d-inline">Wind Speed: <p class="wind6 d-inline"></p></li>
                     </div>
                 </div>
             </div>
