icon working for current day

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
         </div>
 
         <div class="col-12 col-md-8">
-            <div class="current-container row">
-                <h2 class="col-1">City: <h2 class="today-in col-1"></h2><h3 class="date1"></h3></h2>
+            <div class="current-container row card">
+                <h2 class="d-inline">City: <p class="today-in d-inline"></p><h3 class="date1"></h3></h2>
                 <div id="current">
+                    <img id="image1" src="#" alt="weather-icon">
                     <div class="list-group">
                         <li class="d-inline">Temperaure: <p class="temp1 d-inline"></p></li>
                         <li class="d-inline">Humidity: <p class="hum1 d-inline"></p></li>
