worked on the css

--- a/index.html
+++ b/index.html
@@ -19,11 +19,8 @@
 
             <div class="card">
                 <h3 class="card-header">Search City</h3>
-                <form id="user-form" class="card-body">
-                    <label class="form-label" for="city-name"></label>
-                    <input name="city-name" id="city-name" type="text" autofocus="true" class="form-input" />
-                    <button id="submit">Search</button>
-                </form>
+                <input name="city-name" id="city-name" type="text" autofocus="true" class="form-input" />
+                <button id="submit">Search</button>
             </div>
 
             <div class="card">
@@ -40,48 +37,73 @@
 
         <div class="col-12 col-md-8">
             <div class="current-container row card">
-                <h2 class="d-inline">City: <p class="today-in d-inline"></p><h3 class="date1"></h3></h2>
+                <h2 class="d-inline">City: <p class="today-in d-inline"></p>
+                    <h3 class="date1"></h3>
+                </h2>
                 <div id="current">
                     <img id="image1" src="#" alt="weather-icon">
                     <div class="list-group">
-                        <li class="d-inline">Temperaure: <p class="temp1 d-inline"></p></li>
-                        <li class="d-inline">Humidity: <p class="hum1 d-inline"></p></li>
-                        <li class="d-inline">Wind Speed: <p class="wind1 d-inline"></p></li>
+                        <li class="d-inline">Temperaure: <p class="temp1 d-inline"></p>
+                        </li>
+                        <li class="d-inline">Humidity: <p class="hum1 d-inline"></p>
+                        </li>
+                        <li class="d-inline">Wind Speed: <p class="wind1 d-inline"></p>
+                        </li>
                     </div>
                 </div>
             </div>
             <div class="forecast-container">
                 <h2>5 day forecast:</h2>
                 <div id="forecast" class="row">
-                    <div class="card col-3" >
+                    <div class="card col-3">
                         <h3 class="date2"></h3>
-                        <li class="d-inline">Temperaure: <p class="temp2 d-inline"></p></li>
-                        <li class="d-inline">Humidity: <p class="hum2 d-inline"></p></li>
-                        <li class="d-inline">Wind Speed: <p class="wind2 d-inline"></p></li>
+                        <img id="image2" src="#" alt="weather-icon">
+                        <li class="d-inline">Temperaure: <p class="temp2 d-inline"></p>
+                        </li>
+                        <li class="d-inline">Humidity: <p class="hum2 d-inline"></p>
+                        </li>
+                        <li class="d-inline">Wind Speed: <p class="wind2 d-inline"></p>
+                        </li>
                     </div>
                     <div class="card col-3">
                         <h3 class="date3"></h3>
-                        <li class="d-inline">Temperaure: <p class="temp3 d-inline"></p></li>
-                        <li class="d-inline">Humidity: <p class="hum3 d-inline"></p></li>
-                        <li class="d-inline">Wind Speed: <p class="wind3 d-inline"></p></li>
+                        <img id="image3" src="#" alt="weather-icon">
+                        <li class="d-inline">Temperaure: <p class="temp3 d-inline"></p>
+                        </li>
+                        <li class="d-inline">Humidity: <p class="hum3 d-inline"></p>
+                        </li>
+                        <li class="d-inline">Wind Speed: <p class="wind3 d-inline"></p>
+                        </li>
                     </div>
                     <div class="card col-3">
                         <h3 class="date4"></h3>
-                        <li class="d-inline">Temperaure: <p class="temp4 d-inline"></p></li>
-                        <li class="d-inline">Humidity: <p class="hum4 d-inline"></p></li>
-                        <li class="d-inline">Wind Speed: <p class="wind4 d-inline"></p></li>
+                        <img id="image4" src="#" alt="weather-icon">
+                        <li class="d-inline">Temperaure: <p class="temp4 d-inline"></p>
+                        </li>
+                        <li class="d-inline">Humidity: <p class="hum4 d-inline"></p>
+                        </li>
+                        <li class="d-inline">Wind Speed: <p class="wind4 d-inline"></p>
+                        </li>
                     </div>
                     <div class="card col-3">
                         <h3 class="date5"></h3>
-                        <li class="d-inline">Temperaure: <p class="temp5 d-inline"></p></li>
-                        <li class="d-inline">Humidity: <p class="hum5 d-inline"></p></li>
-                        <li class="d-inline">Wind Speed: <p class="wind5 d-inline"></p></li>
+                        <img id="image5" src="#" alt="weather-icon">
+                        <li class="d-inline">Temperaure: <p class="temp5 d-inline"></p>
+                        </li>
+                        <li class="d-inline">Humidity: <p class="hum5 d-inline"></p>
+                        </li>
+                        <li class="d-inline">Wind Speed: <p class="wind5 d-inline"></p>
+                        </li>
                     </div>
                     <div class="card col-3">
                         <h3 class="date6"></h3>
-                        <li class="d-inline">Temperaure: <p class="temp6 d-inline"></p></li>
-                        <li class="d-inline">Humidity: <p class="hum6 d-inline"></p></li>
-                        <li class="d-inline">Wind Speed: <p class="wind6 d-inline"></p></li>
+                        <img id="image6" src="#" alt="weather-icon">
+                        <li class="d-inline">Temperaure: <p class="temp6 d-inline"></p>
+                        </li>
+                        <li class="d-inline">Humidity: <p class="hum6 d-inline"></p>
+                        </li>
+                        <li class="d-inline">Wind Speed: <p class="wind6 d-inline"></p>
+                        </li>
                     </div>
                 </div>
             </div>
